--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     defaultConfig {
         applicationId "com.yibaifen.endler.xindong"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,9 +29,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.github.bumptech.glide:glide:4.6.1'
@@ -43,7 +43,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.sina.weibo.sdk:core:4.2.7:openDefaultRelease@aar'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    compile 'com.android.support:cardview-v7:27.1.0'
+    compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.google.android.gms:play-services-ads:15.0.0'
     testImplementation 'junit:junit:4.12'
+    compile 'com.github.anzaizai:EasyRefreshLayout:1.3.1'
+
 
 }
