--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        
+        classpath 'com.android.tools.build:gradle:3.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,8 +19,13 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url "https://dl.bintray.com/thelasterstar/maven/" }
+        maven {
+            url "https://dl.bintray.com/thelasterstar/maven/"
+        }
         maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
+
     }
 }
 
